<resources>
    <string name="app_name">Blood bank</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="connection_error_misconfigured" />
    <string name="connection_error_internal" />
    <string name="connection_error_invalid_account" />
    <string name="connection_error_license_check_failed" />
    <string name="connection_error_network" />
    <string name="connection_error_needs_resolution" />
    <string name="connection_error_disabled" />
    <string name="connection_error_invalid" />
    <string name="connection_error_missing" />
    <string name="connection_error_outdated" />
    <string name="connection_error_sign_in_required" />
    <string name="connection_error_unknown" />
    <string name="LoginError">Wrong Username or Password.</string>
    <string name="Loginsuccess">Login Successful!</string>
    <string name="SignUperror">You have entered something wrong</string>
    <string name="SignUpSuccess">Sign Up Successful!</string>
    <string name="EmailValidationError">Invalid Email</string>
    <string name="PhoneValidationError">Invalid Phone Number</string>
    <string name="PincodeValidationError">Invalid Pincode</string>
    <string name="PasswordValidationError">Invalid Password</string>
    <string name="Heading">BLOOD BANK DETAILS</string>
    <string name="CityError">City is not avilable</string>
    <string name="Fetching">Fetching Data</string>
    <string name="Wait">Please Wait...</string>
    <string name="downloading">Downloading...</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="Message">HELP!!</string>
    <string name="InternetError">No internet connection</string>
    <string name="SendSMS">Send SMS</string>
    <string name="SendEmergency">Sendig SMS to emergency contact</string>
    <string name="LocationError">Unable to fetch your location. Please try again..</string>
    <string name="LocationRequest">For Blood Bank App to function properly, we need to access your current location.</string>
    <string name="OK">OK</string>
    <string name="SMSPermission">ENABLE SMS PERMISSION</string>
    <string name="NeedSMSPermission">Please enable SMS permission for sending SMS</string>
    <string name="PermissionDeniedTitle">SMS PERMISSION DENIED</string>
    <string name="PermissionDeniedMessage">SMS permission denied please go to Settings to change it.</string>
    <string name="FetchingDirection">Fetching Direction</string>

    <string name="MobileNumber">Enter your Mobile Number</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in/साइन इन करें</string>
    <string name="action_sign_up">Sign up/साइन अप करें</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome to\nBlood Bank</string>
    <string name="forgot">Forgot Password</string>
    <string name="sign_in_loading">Signing in. Please wait...</string>
    <string name="title_activity_donor_login">Sign Up</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_remider">Reminder</string>
    <string name="title_activity_donation_reminder">Reminder</string>
    <string name="title_activity_donation_date">Donation Date</string>
    <string name="title_activity_add_certificate">Certificate</string>
    <string name="error_activity_not_found">Oops, we could not find the requested application</string>
    <string name="name">Enter name here</string>
    <string name="invalid_name">Please provide a valid name</string>
    <string name="DonorList">"Donor list"</string>
    <string name="BloodBankList">blood bank list</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="EMAIL">EMAIL ID</string>
    <string name="HintDOB">Enter Date of Birth Here</string>
    <string name="HintName">Enter Name Here</string>
    <string name="HintAdd">Address</string>
    <string name="HintCity">Enter City Here</string>
    <string name="HintDistrict">Enter District Here</string>
    <string name="HintState">Enter state here</string>
    <string name="HintPin">Enter Pin Code Here</string>
    <string name="HintBG">Enter Blood Group here</string>
    <string name="HintHeight">Height in centimeters</string>
    <string name="HintWeight">Weight in Kg</string>
    <string name="Willing">I AM WILLING TO DONATE BLOOD WHEN REQUIRED</string>
    <string name="Next">NEXT</string>
    <string name="About">About</string>
    <string name="FAQs">FAQs</string>
    <string name="Certificates">Certificates</string>
    <string name="Credits">Credits</string>
    <string name="Iwishtodonate">I wish to donate</string>
    <string name="Ineedblood">I need blood</string>
    <string name="IaminanEmergency">I am in an Emergency</string>
    <string name="Fetchinglocation">Fetching location...</string>
    <string name="ListofnearbyBloodBanks">List of nearby Blood Banks</string>
    <string name="Chooseyourdistance">Choose your distance in km: </string>
    <string name="SearchByCity">Search By City</string>
    <string name="SMStoemergencycontact">SMS to emergency contact</string>
    <string name="BloodBankName">Blood Bank Name : </string>
    <string name="Address">Address : </string>
    <string name="State">State : </string>
    <string name="Pincode">Pincode : </string>
    <string name="Contact">Contact : </string>
    <string name="AP">A+ : </string>
    <string name="AN">A- : </string>
    <string name="ABP">AB+ : </string>
    <string name="ABN">AB- : </string>
    <string name="BP">B+ : </string>
    <string name="BN">B- : </string>
    <string name="OP">O+ : </string>
    <string name="ON">O- : </string>
    <string name="City">City : </string>
    <string name="LastBloodDonation">Last Blood Donated on</string>
    <string name="LastplateleteDonated">Last platelete Donated on</string>
    <string name="Email">Email</string>
    <string name="EmergencyContact">Emergency Contact</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="EnterOTP">Enter the  OTP</string>
    <string name="VerifyOTP">Verify OTP</string>
    <string name="Password">Password</string>
    <string name="contact_donor">To protect donor privacy, donor contact details are not shared here. The donor will be contacted by the Red Revolution automated system on your behalf. The donor will get in touch with you if he is available to donate blood. Do you wish to contact the donor? </string>
    <string name="sms_sent_donor">SMS has been sent to donor</string>

    <string name="enter_bloodgroup">Enter blood group</string>
</resources>

