<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/About" />
            <item
                android:id="@+id/faq"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/FAQs" />
            <item
                android:id="@+id/certs"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/Certificates" />
            <item
                android:id="@+id/credits"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Credits" />
        </menu>
    </item>

</menu>
