<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rajukumarsingh.bloodbank.Donor_login">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_marginTop="29dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        />

    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/editText"
        android:layout_below="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_below="@+id/editText"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot"
        android:text="@string/forgot"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="right"
        android:layout_below="@+id/editText2"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:layout_below="@+id/forgot"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:text="@string/action_sign_up"
        android:layout_below="@+id/button9"/>

</RelativeLayout>
