<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_blood_bank_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rajukumarsingh.bloodbank.Blood_bank_details">

    <TextView
        android:text="@string/Heading"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView25" />

    <TextView
        android:text="@string/BloodBankName"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/textView26" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView26"
        android:layout_toRightOf="@+id/textView26"
        android:layout_toEndOf="@+id/textView26"
        android:id="@+id/textView27" />

    <TextView
        android:text="@string/Address"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView28" />

    <TextView
        android:text="@string/State"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView31"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView33" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView32"
        android:layout_toRightOf="@+id/textView33"
        android:layout_toEndOf="@+id/textView33"
        android:id="@+id/textView34" />

    <TextView
        android:text="@string/Pincode"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView33"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView35" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView34"
        android:layout_toRightOf="@+id/textView35"
        android:layout_toEndOf="@+id/textView35"
        android:id="@+id/textView36" />

    <TextView
        android:text="@string/Contact"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView35"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView37" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:textColor="#22ae09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView35"
        android:layout_toRightOf="@+id/textView35"
        android:layout_toEndOf="@+id/textView35"
        android:id="@+id/textView38" />

    <TextView
        android:text="@string/AP"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView37"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView39" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView39"
        android:layout_toRightOf="@+id/textView39"
        android:layout_toEndOf="@+id/textView39"
        android:id="@+id/textView40" />

    <TextView
        android:text="@string/AN"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView39"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView41" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView41"
        android:layout_toRightOf="@+id/textView41"
        android:layout_toEndOf="@+id/textView41"
        android:id="@+id/textView42" />

    <TextView
        android:text="@string/ABP"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView41"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView43" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView43"
        android:layout_toRightOf="@+id/textView43"
        android:layout_toEndOf="@+id/textView43"
        android:id="@+id/textView44" />

    <TextView
        android:text="@string/ABN"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView43"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView45" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView45"
        android:layout_toRightOf="@+id/textView45"
        android:layout_toEndOf="@+id/textView45"
        android:id="@+id/textView46" />

    <TextView
        android:text="@string/BP"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView45"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView47" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView47"
        android:layout_toRightOf="@+id/textView47"
        android:layout_toEndOf="@+id/textView47"
        android:id="@+id/textView48" />

    <TextView
        android:text="@string/BN"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView47"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView49" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView49"
        android:layout_toRightOf="@+id/textView49"
        android:layout_toEndOf="@+id/textView49"
        android:id="@+id/textView50" />

    <TextView
        android:text="@string/OP"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView49"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView51" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView51"
        android:layout_toRightOf="@+id/textView51"
        android:layout_toEndOf="@+id/textView51"
        android:id="@+id/textView52" />

    <TextView
        android:text="@string/ON"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView51"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView53" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView53"
        android:layout_toRightOf="@+id/textView53"
        android:layout_toEndOf="@+id/textView53"
        android:id="@+id/textView54" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView32"
        android:layout_above="@+id/textView33"
        android:layout_toRightOf="@+id/textView33"
        android:layout_toEndOf="@+id/textView33" />

    <TextView
        android:text="TextView"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/textView29"
        android:layout_alignBaseline="@+id/textView28"
        android:layout_alignBottom="@+id/textView28"
        android:layout_toRightOf="@+id/textView28"
        android:layout_toEndOf="@+id/textView28" />

    <TextView
        android:text="@string/City"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView31"
        android:layout_below="@+id/textView29"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
