<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bloodbank_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rajukumarsingh.bloodbank.Bloodbank_list">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/SearchByCity"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button11"
        android:layout_alignParentLeft="true"
        android:id="@+id/editText11" />

    <Button
        android:background="@drawable/places_ic_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:id="@+id/button11"
        android:layout_alignTop="@+id/editText11"
        android:layout_alignParentRight="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chooseyourdistance"
        android:layout_below="@+id/editText11"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView8" />

    <Spinner
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:id="@+id/spinner"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/contactDonor"
        android:id="@+id/listView"/>







    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/contactDonor"
        android:text="@string/SMStoemergencycontact"/>
</RelativeLayout>
